// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingTips Components DevicePendingTip renders correctly 1`] = `
.emotion-0 .MuiButtonBase-root.MuiButton-text {
  color: #fff;
  padding-right: 0;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

<div
  class="emotion-0 onboard-tip"
  data-mui-internal-clone-element="true"
  style="left: -15px; top: 0px; overflow: initial;"
>
  <div
    class="tooltip onboard-icon bottom"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
      data-testid="ScheduleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
      <path
        d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
      />
    </svg>
  </div>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DashboardOnboardingPendings correctly 1`] = `
<div>
  Next accept your device
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DashboardOnboardingState correctly 1`] = `
<div>
  Your device has requested to join the server. Click the row to expand the device details.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DeploymentsInprogress correctly 1`] = `
<div>
  Your deployment is in progress. Click to view a report
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DeploymentsPast correctly 1`] = `
<div>
  Your deployment has finished, click here to view it
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DeploymentsPastCompletedFailure correctly 1`] = `
<div>
  Your deployment has finished, but it looks like there was a problem. Click to view the deployment report, where you can see the error log.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DevicesAcceptedOnboarding correctly 1`] = `
.emotion-0 .MuiButtonBase-root.MuiButton-text {
  color: #fff;
  padding-right: 0;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

<div
  class="emotion-0 onboard-tip"
  createdgroup="testgroup"
  data-mui-internal-clone-element="true"
  selectedrelease="test"
  style="left: -15px; top: 0px; overflow: initial;"
>
  <div
    class="tooltip onboard-icon bottom"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
      data-testid="ArrowUpwardIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
      />
    </svg>
  </div>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DevicesPendingAcceptingOnboarding correctly 1`] = `
<div>
  Your device has made a request to join the Mender server. You can inspect its identity details, such as mac address and public key, to verify it is definitely your device.
  <br />
  When you are ready, Accept it!
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders GetStartedTip correctly 1`] = `
.emotion-0 .MuiButtonBase-root.MuiButton-text {
  color: #fff;
  padding-right: 0;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

<div
  class="emotion-0 onboard-tip"
  createdgroup="testgroup"
  data-mui-internal-clone-element="true"
  selectedrelease="test"
  style="left: -15px; top: 0px; overflow: initial;"
>
  <div
    class="tooltip onboard-icon bottom"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
      data-testid="ArrowUpwardIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
      />
    </svg>
  </div>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingAllDevicesSelection correctly 1`] = `
<div>
  Select 'All devices' for now.
  <p>
    You can learn how to create device groups later.
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingArtifactSelection correctly 1`] = `
<div>
  Select the test release we included.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingGroupSelection correctly 1`] = `
<div>
  Select the testgroup device group you just made.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingReleaseToDevices correctly 1`] = `
<div>
  Create the deployment! This will deploy the test Artifact to All devices
</div>
`;
